Improve the Kafka Connect Build with some Java 17 features (#7761)
Signed-off-by: Jakub Scholz <www@scholzj.com>